fix accdet & accsel & keypad & conf arm64

--- a/arch/arm/configs/s450m_4g_defconfig
+++ b/arch/arm/configs/s450m_4g_defconfig
@@ -1179,9 +1179,9 @@ CONFIG_MTK_SENSOR_SUPPORT=y
 # CONFIG_MTK_AUTO_DETECT_ACCELEROMETER is not set
 # CONFIG_MTK_AUTO_DETECT_MAGNETOMETER is not set
 # CONFIG_MTK_AUTO_DETECT_ALSPS is not set
-# CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
+CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
 # CONFIG_CUSTOM_KERNEL_GYROSCOPE is not set
-# CONFIG_CUSTOM_KERNEL_ALSPS=y
+# CONFIG_CUSTOM_KERNEL_ALSPS is not set
 # CONFIG_CUSTOM_SEC_AUTH_SUPPORT is not set
 # CONFIG_CUSTOM_KERNEL_MAGNETOMETER is not set
 # CONFIG_CUSTOM_KERNEL_BAROMETER is not set
@@ -1418,7 +1418,7 @@ CONFIG_MTK_SIM2=y
 # CONFIG_MTK_APM_16D is not set
 # CONFIG_MTK_EPL2182 is not set
 # CONFIG_MTK_EPL2182_NEW is not set
-CONFIG_MTK_STK3X1X=y
+# CONFIG_MTK_STK3X1X is not set
 # CONFIG_MTK_STK3X1X_NEW is not set
 # CONFIG_MTK_CM36652_NEW is not set
 # CONFIG_MTK_APDS9930 is not set
@@ -1426,11 +1426,11 @@ CONFIG_MTK_STK3X1X=y
 # CONFIG_MTK_RPR410 is not set
 # CONFIG_MTK_APDS9930_NEW is not set
 # CONFIG_MTK_KXTJ2_1009 is not set
-CONFIG_MTK_KXTIK1004=y
+# CONFIG_MTK_KXTIK1004 is not set
 # CONFIG_MTK_K2DH is not set
 # CONFIG_MTK_BMA222E is not set
 # CONFIG_MTK_BMA222E_NEW is not set
-# CONFIG_MTK_MC3410_NEW is not set
+CONFIG_MTK_MC3410_NEW=y
 # CONFIG_MTK_MPU6050G_NEW is not set
 # CONFIG_MTK_MPU6050G is not set
 # CONFIG_MTK_BMA250 is not set
@@ -1550,7 +1550,7 @@ CONFIG_MTK_AAL_SUPPORT=y
 # CONFIG_MTK_LENS_BU6429AF_SUPPORT is not set
 # CONFIG_MTK_LENS_BU64745GWZAF_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9718AF_SUPPORT is not set
-CONFIG_MTK_LENS_DW9714AF_SUPPORT=y
+# CONFIG_MTK_LENS_DW9714AF_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9714A_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9814AF_SUPPORT is not set
 # CONFIG_MTK_LENS_LC898122AF_SUPPORT is not set
