--- a/arch/arm64/configs/s450m_4g_64_defconfig
+++ b/arch/arm64/configs/s450m_4g_64_defconfig
@@ -90,7 +90,7 @@ CONFIG_RCU_FANOUT_LEAF=16
 # CONFIG_RCU_BOOST is not set
 # CONFIG_RCU_NOCB_CPU is not set
 # CONFIG_IKCONFIG is not set
-CONFIG_LOG_BUF_SHIFT=17
+CONFIG_LOG_BUF_SHIFT=21
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
@@ -1015,8 +1015,8 @@ CONFIG_MTK_SENSOR_SUPPORT=y
 # CONFIG_MTK_AUTO_DETECT_MAGNETOMETER is not set
 # CONFIG_MTK_AUTO_DETECT_ALSPS is not set
 CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
-CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
-CONFIG_CUSTOM_KERNEL_ALSPS=y
+# CONFIG_CUSTOM_KERNEL_GYROSCOPE is not set
+# CONFIG_CUSTOM_KERNEL_ALSPS is not set
 # CONFIG_CUSTOM_SEC_AUTH_SUPPORT is not set
 CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
 # CONFIG_CUSTOM_KERNEL_BAROMETER is not set
@@ -1162,8 +1162,8 @@ CONFIG_MTK_FB=y
 CONFIG_MTK_FB_SUPPORT_ASSERTION_LAYER=y
 CONFIG_MTK_DITHERING_SUPPORT=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
-CONFIG_LCM_HEIGHT="960"
-CONFIG_LCM_WIDTH="540"
+CONFIG_LCM_HEIGHT="854"
+CONFIG_LCM_WIDTH="480"
 CONFIG_CUSTOM_LCM_X="0"
 CONFIG_CUSTOM_LCM_Y="0"
 # CONFIG_MTK_OVERLAY_ENGINE_SUPPORT is not set
@@ -1172,8 +1172,8 @@ CONFIG_CUSTOM_LCM_Y="0"
 # CONFIG_LCM_SEND_CMD_IN_VIDEO is not set
 CONFIG_GPS=y
 CONFIG_MTK_GPS=y
-CONFIG_MTK_NFC=y
-CONFIG_NFC_MT6605=y
+# CONFIG_MTK_NFC is not set
+# CONFIG_NFC_MT6605 is not set
 # CONFIG_NFC_MSR3110 is not set
 CONFIG_MTK_BTIF=y
 CONFIG_MTK_COMBO=y
@@ -1273,7 +1273,7 @@ CONFIG_MTK_SIM2=y
 # CONFIG_MTK_EPL2182_NEW is not set
 # CONFIG_MTK_STK3X1X is not set
 # CONFIG_MTK_STK3X1X_NEW is not set
-CONFIG_MTK_CM36652_NEW=y
+# CONFIG_MTK_CM36652_NEW is not set
 # CONFIG_MTK_APDS9930 is not set
 # CONFIG_MTK_CM3232_NEW is not set
 # CONFIG_MTK_APDS9930_NEW is not set
@@ -1294,14 +1294,14 @@ CONFIG_MTK_MC3410_NEW=y
 # CONFIG_MTK_MPU3000 is not set
 # CONFIG_MTK_MPU3000_NEW is not set
 # CONFIG_MTK_MPU6050GY_NEW is not set
-CONFIG_MTK_ITG1010_NEW=y
+# CONFIG_MTK_ITG1010_NEW is not set
 # CONFIG_MTK_MPU6515G is not set
 # CONFIG_MTK_MPU3050C_NEW is not set
 # CONFIG_MTK_MPU6050C is not set
 # CONFIG_MTK_AKM8963 is not set
 # CONFIG_MTK_AKM8963_NEW is not set
 # CONFIG_MTK_AKM09911 is not set
-CONFIG_MTK_AKM09911_NEW=y
+# CONFIG_MTK_AKM09911_NEW is not set
 # CONFIG_MTK_HSCDTD006 is not set
 # CONFIG_MTK_BMM050 is not set
 # CONFIG_MTK_BMM050_NEW is not set
@@ -1379,7 +1379,7 @@ CONFIG_MTK_BICR_SUPPORT=y
 # CONFIG_NAND_OTP_SUPPORT is not set
 # CONFIG_MTK_OD_SUPPORT is not set
 # CONFIG_MTK_LENS_DUMMYLENS_SUPPORT is not set
-CONFIG_MTK_LENS_AD5820AF_SUPPORT=y
+# CONFIG_MTK_LENS_AD5820AF_SUPPORT is not set
 # CONFIG_MTK_LENS_AD5823_SUPPORT is not set
 # CONFIG_MTK_LENS_AD5823AF_SUPPORT is not set
 # CONFIG_MTK_LENS_AK7345AF_SUPPORT is not set
@@ -1387,7 +1387,7 @@ CONFIG_MTK_LENS_AD5820AF_SUPPORT=y
 # CONFIG_MTK_LENS_BU6429AF_SUPPORT is not set
 # CONFIG_MTK_LENS_BU64745GWZAF_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9718AF_SUPPORT is not set
-CONFIG_MTK_LENS_DW9714AF_SUPPORT=y
+# CONFIG_MTK_LENS_DW9714AF_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9714A_SUPPORT is not set
 # CONFIG_MTK_LENS_DW9814AF_SUPPORT is not set
 # CONFIG_MTK_LENS_LC898122AF_SUPPORT is not set
@@ -1616,7 +1616,7 @@ CONFIG_TOUCHSCREEN_MTK=y
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_AIO is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT_SCP is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT is not set
-# CONFIG_TOUCHSCREEN_MTK_GT1151=y
+# CONFIG_TOUCHSCREEN_MTK_GT1151 is not set
 CONFIG_TOUCHSCREEN_MTK_FT6206_X2605=y
 # CONFIG_TOUCHSCREEN_MTK_GT910 is not set
 # CONFIG_TOUCHSCREEN_MTK_MAX1187X is not set
