--- a/arch/arm/configs/s450m_4g_defconfig
+++ b/arch/arm/configs/s450m_4g_defconfig
@@ -1200,7 +1200,7 @@ CONFIG_CUSTOM_KERNEL_HEART_RATE_SENSOR=""
 CONFIG_CUSTOM_KERNEL_TILT_DETECTOR_SENSOR=""
 CONFIG_CUSTOM_KERNEL_WAKE_GESTURE_SENSOR=""
 CONFIG_CUSTOM_KERNEL_GLANCE_GESTURE_SENSOR=""
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5k5e2ya_mipi_raw gc0310_mipi_yuv"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="imx145_mipi_raw gc2355_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="imx219_eeprom"
 CONFIG_CUSTOM_KERNEL_LCM="jd9161_fwvga_dsi_vdo_auo"
 CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
@@ -1538,7 +1538,7 @@ CONFIG_MTK_SEC_MODEM_NVRAM_ANTI_CLONE=y
 # CONFIG_MTK_CTP_RESET_CONFIG is not set
 CONFIG_MTK_BICR_SUPPORT=y
 # CONFIG_MTK_VIDEO_HEVC_SUPPORT is not set
-CONFIG_MTK_AAL_SUPPORT=y
+# CONFIG_MTK_AAL_SUPPORT is not set
 # CONFIG_NAND_OTP_SUPPORT is not set
 # CONFIG_MTK_OD_SUPPORT is not set
 # CONFIG_MTK_LENS_DUMMYLENS_SUPPORT is not set
@@ -1571,7 +1571,7 @@ CONFIG_MTK_CMDQ=y
 CONFIG_MTK_VIDEOX=y
 # CONFIG_MTK_MT_LOGGER is not set
 CONFIG_MTK_CONN_MD=y
-CONFIG_MTK_LENS=y
+# CONFIG_MTK_LENS is not set
 CONFIG_MTK_IMGSENSOR=y
 # CONFIG_MTK_CAM_CAL is not set
 CONFIG_MTK_FLASHLIGHT=y
