--- a/arch/arm64/configs/s450m_4g_64_defconfig
+++ b/arch/arm64/configs/s450m_4g_64_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.10.65 Kernel Configuration
+# Linux/arm64 3.10.102 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -1018,7 +1018,7 @@ CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
 # CONFIG_CUSTOM_KERNEL_GYROSCOPE is not set
 # CONFIG_CUSTOM_KERNEL_ALSPS is not set
 # CONFIG_CUSTOM_SEC_AUTH_SUPPORT is not set
-CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
+# CONFIG_CUSTOM_KERNEL_MAGNETOMETER is not set
 # CONFIG_CUSTOM_KERNEL_BAROMETER is not set
 # CONFIG_MTK_SENSOR_HUB_SUPPORT is not set
 CONFIG_CUSTOM_KERNEL_SENSORHUB=""
@@ -1034,8 +1034,8 @@ CONFIG_CUSTOM_KERNEL_HEART_RATE_SENSOR=""
 CONFIG_CUSTOM_KERNEL_TILT_DETECTOR_SENSOR=""
 CONFIG_CUSTOM_KERNEL_WAKE_GESTURE_SENSOR=""
 CONFIG_CUSTOM_KERNEL_GLANCE_GESTURE_SENSOR=""
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="imx219_mipi_raw gc2355_mipi_raw"
-CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV=""
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="imx145_mipi_raw gc2355_mipi_raw"
+CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="imx219_eeprom"
 CONFIG_CUSTOM_KERNEL_LCM="jd9161_fwvga_dsi_vdo_auo"
 CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
 CONFIG_CUSTOM_KERNEL_EXTMD=""
@@ -1338,7 +1338,7 @@ CONFIG_MTK_WD_KICKER=y
 CONFIG_USB_MTK_ACM_TEMP=y
 CONFIG_USB_MTK_HDRC=y
 CONFIG_USB_MTK_HDRC_GADGET=y
-CONFIG_USB_MTK_OTG=y
+# CONFIG_USB_MTK_OTG is not set
 # CONFIG_USB_MTK_DUALMODE is not set
 # CONFIG_USB_MTK_DEBUG_FS is not set
 # CONFIG_USB_MTK_DEBUG is not set
@@ -1410,10 +1410,10 @@ CONFIG_MTK_CMDQ=y
 CONFIG_MTK_VIDEOX=y
 CONFIG_MTK_MT_LOGGER=y
 CONFIG_MTK_CONN_MD=y
-CONFIG_MTK_LENS=y
-# CONFIG_MTK_IMGSENSOR is not set
+# CONFIG_MTK_LENS is not set
+CONFIG_MTK_IMGSENSOR=y
 # CONFIG_MTK_CAM_CAL is not set
-# CONFIG_MTK_FLASHLIGHT is not set
+CONFIG_MTK_FLASHLIGHT=y
 # CONFIG_MTK_DUM_CHAR is not set
 CONFIG_MTK_SYSENV=y
 CONFIG_MTK_SMI=y
