--- a/arch/arm/configs/s450m_4g_defconfig
+++ b/arch/arm/configs/s450m_4g_defconfig
@@ -1200,7 +1200,7 @@ CONFIG_CUSTOM_KERNEL_HEART_RATE_SENSOR=""
 CONFIG_CUSTOM_KERNEL_TILT_DETECTOR_SENSOR=""
 CONFIG_CUSTOM_KERNEL_WAKE_GESTURE_SENSOR=""
 CONFIG_CUSTOM_KERNEL_GLANCE_GESTURE_SENSOR=""
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="imx145_mipi_raw gc2355_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="ov9762_mipi_raw gc0339_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="imx219_eeprom"
 CONFIG_CUSTOM_KERNEL_LCM="jd9161_fwvga_dsi_vdo_auo"
 CONFIG_CUSTOM_KERNEL_FLASHLIGHT="constant_flashlight"
